# yak-server

./: .coveragerc  .dockerignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .yamlfmt  Dockerfile  LICENSE  README.md  _typos.toml  alembic.ini  create_admin.py  create_database.py  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  docker_improvements.md  docker_instructions.txt  documentation.md  init.sh  initialize_database.py  justfile  main.py  package-lock.json  pyproject.toml  renovate.json  requirements-mypy.txt  requirements-tests.txt  requirements.txt  setenv  setup.cfg  setup.py  start.sh
.github/: dependabot.yml  docker-compose.ci.yml
.github/workflows/: codeql-analysis.yml  docker-build-test.yml  lock-file-updator.yaml  pr-notifications.yml  pre-commit.yml  prepare-release.yml  publish-release.yml  release.yml  test.yml  test1.yml  type-checking.yml  update-lock.yml  zizmor.yml
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.vue  main.js
client/src/api/: index.js
client/src/components/: GroupButton.vue  GroupComponent.vue  GroupNavbar.vue  LoginComponent.vue  LogoutComponent.vue  ScoreBoardButton.vue  ScoreBoardComponent.vue  SignupComponent.vue
client/src/router/: index.js
client/src/store/: index.js
client/src/utils/: index.js
client/src/views/: GroupView.vue  HomeView.vue  LoginView.vue  SignupView.vue
data/: date.csv  matches.csv  matches.json  phases.csv  teams.csv
data/world_cup_2022/: config.ini  finale_phase_config.json  phases.csv
doc/: sql_graph.dot  swagger_file.yaml
doc/schemas/: login.yaml  signup.yaml
docker/: backend.dockerfile
docs/: improvements.md
hooks/: pre-commit
project/: __init__.py  auth.py  config.py  main.py  matches.json  models.py  telegram_sender.py  utils.py
project/templates/: base.html  group.html  groups.html  login.html  profile.html  score_board.html  signup.html
requirements/: tests.txt
scripts/: build_hooks.py  build_image.sh  build_images.py  compute_new_version.py  lock_file_updator.sh  postgresrun  postgresrun.sh  profiling.py  tox.sh
server/: __init__.py  auth.py  auth_utils.py  bets.py  config.py  config_file.py  final_phase.py  group.py  groups.py  initialize_db.py  main.py  matches.py  models.py  query.py  result.py  results.py  teams.py  utils.py
server/data/world_cup_2022/: matches.csv
server/database/: models.py  query.py
server/templates/: score_board.html  signup.html
server/utils/: auth_utils.py  constants.py  errors.py  flask_utils.py  telegram_sender.py
server/v1/: auth.py  bets.py  config.py  groups.py  matches.py  results.py  teams.py
server/v1/utils/: auth_utils.py  constants.py  errors.py  flask_utils.py  telegram_sender.py
server/v2/: bearer_authenfication.py  mutation.py  query.py  schema.py
server/v2/utils/: constants.py
stubs/: yappi.pyi
testing/: mock.py  util.py
testing/resources/test_binary_bet/: matches.json  teams.json
testing/resources/test_compute_points_edge_cases_v1/: matches.json  phases.json  teams.json
testing/resources/test_compute_points_v1/: matches.json  teams.json
testing/resources/test_create_bet/: common.json
testing/resources/test_group_rank_team_not_defined/: groups.json  matches.json  teams.json
testing/resources/test_language/: common.json  matches.json  teams.json
tests/: auth_v1_refresh_test.py  auth_v1_test.py  auth_v2_test.py  bets_by_group_test.py  bets_v1_test.py  bets_v2_test.py  binary_bet_v1_test.py  binary_bet_v2_test.py  bulk_modify_score_bets_v1_test.py  cli_test.py  competition_v1_test.py  compute_final_from_rank_test.py  compute_points_edge_cases_test.py  compute_points_test.py  configuration_test.py  conftest.py  constants.py  create_binary_bet_v1_test.py  create_score_bet_v1_test.py  db_sync_test.py  db_sync_without_beautifulsoup_install_test.py  delete_binary_bet_v1_test.py  delete_score_bet_v1_test.py  endpoint_not_found_v1_test.py  group_rank_and_modify_score_bet_v1_test.py  group_rank_v1_test.py  group_rank_v2_test.py  group_v1_test.py  group_v2_test.py  health_check_test.py  initialize_database_test.py  language_v1_test.py  modify_partial_score_bet_v1_test.py  modify_password_v1_test.py  modify_password_v2_test.py  modify_score_bet_and_group_rank_v2_test.py  modify_score_bet_v1_test.py  modify_score_bet_v2_test.py  openapi_test.py  password_requirements_test.py  (+65 more)
tests/test_binary_bet/: groups.json  matches.json
tests/test_compute_points_v1/: groups.json  matches.json
tests/test_matches_db/: group_result.json  groups.csv  match_result.json  matches.csv  matches.json  phases.csv  team_result.json  teams.csv  teams.json
tests/test_modify_bet_v2/: matches.csv  matches.json  teams.csv  teams.json
tests/test_modify_score_bet_and_group_rank/: phases.json
tests/test_teams_v1/: teams.csv  teams.json
tests/utils/: __init__.py  mock.py
util/: backup-db.sh  create_admin.py  initialize_database.py
yak_server/: __init__.py  app.py  config_file.py  health_check.py  logger.py
yak_server/cli/: __init__.py  admin.py  backup-db.sh  backup_database.py  create_admin.py  create_database.py  database.py  delete_database.py  env.py  initialize_database.py  main.py  migration.py  score_board.py  sync.py
yak_server/cli/database/: __init__.py  (+1 more)
yak_server/database/: __init__.py  base.py  models.py  models1.py  models2.py  models3.py  query.py  session.py  settings.py
yak_server/helpers/: admin_view.py  authentication.py  authentification.py  bet_locking.py  config.py  cookies.py  database.py  errors.py  exception_handler.py  format.py  group_position.py  language.py  lobby.py  logging.py  logging_helpers.py  password_validator.py  profiling.py  rules.py  settings.py
yak_server/v1/: auth.py  bets.py  binary_bets.py  config.py  groups.py  matches.py  phase.py  results.py  rules.py  score_bets.py  teams.py
yak_server/v2/: __init__.py  bearer_authenfication.py  bearer_authentication.py  context.py  mutation.py  query.py  result.py  schema.py
yak_server/v3/: endpoints.py  models.py
(+144 files in other folders)
